aking much progress on design and components-still designing as I go and learning about animations

--- a/client/src/components/hero/hero.scss
+++ b/client/src/components/hero/hero.scss
@@ -17,6 +17,9 @@
     height: 100%;
     width: 100%;
     justify-content: center;
+    h1 {
+        justify-content: center;
+    }
 }
 .carousel__card {
     width: 200px;
