--- a/client/src/components/hero/hero.scss
+++ b/client/src/components/hero/hero.scss
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Unica+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap');
+
 .hero {
     display: flex;
     flex-direction: column;
     height: 100vw;
-    background-color: gainsboro;
+    background-image: url('./../../test/nordwood-themes-Tmz8FThN_BE-unsplash.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100vw;
 }
 .hero__banner {
-    width: 50%;
+    width: 40%;
     justify-content: center;
     padding-top: 10%;
     margin: 0 auto;
@@ -18,8 +23,31 @@
     width: 100%;
     justify-content: center;
     h1 {
-        justify-content: center;
+        margin: 0 auto;
     }
+}
+.hero__description {
+    font-family: Ubuntu Condensed;
+    display: block;
+    justify-content: center;
+    margin: 0 auto;
+    text-justify: newspaper;
+    padding: 15px;
+    margin-bottom: 190px;
+    h1 {
+        padding-left: 27%;
+        padding-top: 20%;
+        padding-bottom: 5%;
+    }
+}
+.hero__button {
+    font-family: Unica One;
+    width: 24rem;
+    height: 10rem;
+    margin: 0 auto;
+    border-radius: 10%;
+    font-size: large;
+    font-weight: bold;
 }
 .carousel__card {
     width: 200px;
