adding more functionality and finishing up components

--- a/client/src/components/navBar/navBar.scss
+++ b/client/src/components/navBar/navBar.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Unica+One&display=swap');
 .nav {
-    background-color: rgba(149,225,48, 0.45);
+    background-color: slategrey;
     color: white;
     display: flex;
     padding: 10px;
