--- a/client/src/components/hero/hero.scss
+++ b/client/src/components/hero/hero.scss
@@ -5,11 +5,12 @@
     display: flex;
     flex-direction: column;
     height: 100vw;
-    background-image: url('./../../test/nordwood-themes-Tmz8FThN_BE-unsplash.jpg');
     background-size: cover;
+    opacity: 0.75;
     background-repeat: no-repeat;
     width: 100vw;
 }
+
 .hero__banner {
     width: 40%;
     justify-content: center;
