--- a/client/src/components/hero/hero.scss
+++ b/client/src/components/hero/hero.scss
@@ -46,9 +46,10 @@
     width: 24rem;
     height: 10rem;
     margin: 0 auto;
-    border-radius: 10%;
+    border-radius: 5%;
     font-size: large;
     font-weight: bold;
+    border: none;
 }
 .carousel__card {
     width: 200px;
