files all a mess, art not uploaded

--- a/client/src/components/hero/hero.scss
+++ b/client/src/components/hero/hero.scss
@@ -43,13 +43,14 @@
 }
 .hero__button {
     font-family: Unica One;
-    width: 24rem;
-    height: 10rem;
-    margin: 0 auto;
+    width: 14rem;
+    height: 3rem;
+    margin: 40px 0px 0px 170px;
     border-radius: 5%;
     font-size: large;
     font-weight: bold;
     border: none;
+    text-transform: none;
 }
 .carousel__card {
     width: 200px;
