--- a/client/src/components/pantry/pantry.scss
+++ b/client/src/components/pantry/pantry.scss
@@ -15,13 +15,42 @@
     max-width: 100%;
     z-index: 1;
     top: 70px;
-    left: 30px;
-    right: 30px;
-    bottom: 40px;
+    left: 230px;
+    right: 230px;
+    bottom: 140px;
     background-color: white;
     overflow-y: auto;
     -ms-overflow-style: none;
 }
 .modal__explore::-webkit-scrollbar {
     display: none;
+}
+.modal__label{
+    color: #afafaf;
+    font-weight: 600;
+    
+}
+.pantry__recipe {
+    display: flex;
+    font-family: Ubuntu Condensed;
+    width: 45%;
+    padding: 20px;
+    margin-left: 60px;
+    flex-direction: column;
+    background: #fff;
+    text-transform: capitalize;
+    -webkit-box-shadow: -2px 0px 10px -1px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: -2px 0px 10px -1px rgba(0, 0, 0, 0.6);
+    box-shadow: -2px 0px 10px -1px rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
+    position: relative;
+        h2{
+            text-align: center;
+            color: navy
+        }
+
+    &__box {
+    padding: 0 1.5rem;
+    display: flex;
+    }
 }
