--- a/client/src/components/Meal-Selection/select.scss
+++ b/client/src/components/Meal-Selection/select.scss
@@ -19,3 +19,11 @@
 .results__form{
     width: 50%;
 }
+#explore {
+    text-decoration: none;
+    color: black;
+}
+#select {
+    text-decoration: none;
+    color: black;
+}
