--- a/client/src/components/recipeSearch/recipe.scss
+++ b/client/src/components/recipeSearch/recipe.scss
@@ -1,4 +1,5 @@
 .recipe {
+    font-family: Roboto;
     display: flex;
     flex-direction: column;
     background: #fff;
@@ -15,6 +16,7 @@
 
 &__img {
     width: 50%;
+    border-radius: 5%;
 }
 
 &__box {
