--- a/client/src/components/recipeSearch/recipe.scss
+++ b/client/src/components/recipeSearch/recipe.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 .recipe {
     font-family: Roboto;
     display: flex;
