--- a/client/src/components/recipeSearch/recipeSearch.scss
+++ b/client/src/components/recipeSearch/recipeSearch.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
+
 .main__search {
     min-width: 42.75em;
     height: 2.85em;
