--- a/client/src/components/Meal-Selection/select.scss
+++ b/client/src/components/Meal-Selection/select.scss
@@ -1,11 +1,18 @@
 .results__wrapper{
     display: flex;
-    width: 90%;
-    justify-content: space-evenly;
+    width: 100%;
+    height: 50vh;
+    justify-content: space-between;
+    background-image: url('./../../test/nicolas-gras-UiGsP8TvOJQ-unsplash.jpg');
+    background-size: cover;
     h1 {
         font-family: Ubuntu Condensed;
         padding-left: 15%;
     }
+}
+.background-image {
+    background-image: url('./../../test/nicolas-gras-UiGsP8TvOJQ-unsplash.jpg');
+    background-size: cover;
 }
 .results__search {
     min-width: 12.75em;
@@ -15,6 +22,25 @@
     border: 1px solid #afafaf;
     margin: 5%;
     padding: 15px;
+}
+.subbtn {
+    width: 9rem;
+    height: 3rem;
+    border: solid 2px #000;
+    background: transparent;
+    padding: 0.4rem 0.8rem;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    border-radius: 6px;
+    font-size: 0.7rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: 0.4s;
+    cursor: pointer;
+        &:hover {
+        background: #000;
+        color: #fff;
+        }
 }
 .results__form{
     width: 50%;
@@ -26,4 +52,66 @@
 #select {
     text-decoration: none;
     color: black;
+}
+.recipe__search {
+    font-family: Roboto;
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    text-transform: capitalize;
+    -webkit-box-shadow: -2px 0px 10px -1px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: -2px 0px 10px -1px rgba(0, 0, 0, 0.6);
+    box-shadow: -2px 0px 10px -1px rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
+    position: relative;
+    
+
+&__img {
+    width: 50%;
+    border-radius: 5%;
+}
+
+&__box {
+    padding: 0 1.5rem;
+    display: flex;
+}
+
+&__title {
+    font-family: Roboto Slab;
+    font-size: large;
+    padding-top: 5%;
+}
+
+&_text {
+    width: 100%;
+    font-family: Roboto Slab;
+}
+
+&__button {
+    max-width: 100%;
+    box-sizing: border-box;
+    display: inline-block;
+    padding: 5px 90px;
+    background: #000;
+    color: #fff;
+    border: 2px solid #000;
+    border-radius: 2px;
+    position: absolute;
+    bottom: 18px;
+    left: 22px;
+    text-decoration: none;
+    transition: 0.4s;
+    &:hover {
+    background: #fff;
+    color: #000;
+    border: 2px solid #000;
+    }
+}
+}
+.small__text {
+    padding-top: 5%;
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+    align-items: baseline;
 }
