--- a/client/src/components/exploreModal/recipeExplore.scss
+++ b/client/src/components/exploreModal/recipeExplore.scss
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Unica+One&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 
 .card {
-    font-family: Ubuntu Condensed;
+    font-family: Roboto Slab;
     display: flex;
     flex-wrap: wrap;
 }
 .card__title {
-    font-family: Ubuntu Condensed;
+    font-family: Roboto Slab;
     font-size: 36px;
 }
 .card__text {
@@ -34,6 +35,7 @@
     background: rgba(0, 0, 0, 0.6);
 }
 .modal__explore {
+    font-family: Roboto Slab;
     position: absolute;
     max-width: 100%;
     z-index: 1;
