--- a/client/src/components/pantry/pantryModal.scss
+++ b/client/src/components/pantry/pantryModal.scss
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Unica+One&display=swap');
 .form__wrapper {
     width: 100%;
-    font-family: Roboto;
     padding: 5%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     h2{
+        font-family: Roboto Slab;
         padding-top: 5%;
         align-items: center;
     }
@@ -21,8 +21,8 @@
     font-size: 14px;
     border-radius: 5px;
     border: 1px solid #afafaf;
-    margin-top: 5%;
-    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-bottom: 10px;
     padding: 15px;
 }
 .pantrybtn {
@@ -31,6 +31,7 @@
     background: transparent;
     padding: 0.4rem 0.8rem;
     margin-bottom: 20px;
+    margin-top: 20px;
     border-radius: 6px;
     font-size: 0.7rem;
     text-transform: uppercase;
@@ -56,4 +57,19 @@
 }
 .pantry__container {
     margin: 0px 40px 0px 40px;
+}
+.pmodal__explore {
+    position: absolute;
+    max-width: 30%;
+    z-index: 1;
+    top: 70px;
+    left: 430px;
+    right: 430px;
+    bottom: 40px;
+    background-color: white;
+    overflow-y: auto;
+    -ms-overflow-style: none;
+}
+.pmodal__explore::-webkit-scrollbar {
+    display: none;
 }
